[gd_scene load_steps=3 format=2]

[ext_resource path="res://main_app/tab_scenes/market_guide/BadgeGuide.tscn" type="PackedScene" id=1]
[ext_resource path="res://main_app/tab_scenes/market_guide/CardBuyGuide.gd" type="Script" id=2]

[node name="CardBuyGuide" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 20
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "BadgeGuide" ), [ ExtResource( 1 ) ] ]

[node name="Content" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 20.0
margin_right = 994.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="Buttons" type="HBoxContainer" parent="Content"]
margin_right = 964.0
margin_bottom = 20.0
custom_constants/separation = 15

[node name="UpdateBadges" type="Button" parent="Content/Buttons"]
margin_right = 474.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Update All Badges Data"

[node name="UpdatePrices" type="Button" parent="Content/Buttons"]
margin_left = 489.0
margin_right = 964.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Update All incomplete Badge Prices"

[node name="Scroll" type="ScrollContainer" parent="Content"]
margin_top = 35.0
margin_right = 964.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="List" type="VBoxContainer" parent="Content/Scroll"]
margin_right = 964.0
margin_bottom = 515.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
[connection signal="pressed" from="Content/Buttons/UpdateBadges" to="." method="_on_UpdateBadges_pressed"]
[connection signal="pressed" from="Content/Buttons/UpdatePrices" to="." method="_on_UpdatePrices_pressed"]
